fix: spacing updates on mobile

--- a/src/components/PetCard/index.module.css
+++ b/src/components/PetCard/index.module.css
@@ -16,5 +16,6 @@
   .petCardContainer {
     width: 290px;
     height: 170px;
+    padding: 10px;
   }
 }
