--- a/src/pages/ConsultData/index.module.css
+++ b/src/pages/ConsultData/index.module.css
@@ -40,7 +40,8 @@
 
 @media (max-width: 768px) {
   .petDataContainer {
-    padding: 10px;
+    padding: 0px 10px;
+    margin: 20px;
     margin-bottom: 50px;
     height: auto;
   }
